[package]
name = "httpie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # error handler 
clap = "3.0.0-beta.4" # cli for args
colored = "2" # color formt for output
jsonxf = "1.1" # JSON pretty print
mime = "0.3" # mime handle
reqwest = { version = "0.11", features = ["json"]}
tokio = {version = "1", features = ["full"]}
